--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,53 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div class="flex items-center content-between">
+  <nav class="rounded-md w-full my-10">
+      <ol class="list-reset flex">
+          <li
+              [ngClass]="{ 'dark:bg-gray-50 dark:text-gray-900 bg-gray-900 text-gray-50 font-bold px-2 rounded': true }">
+              Index
+          </li>
+          <!-- <li><span class="text-gray-500 mx-2">/</span></li>
 
-<router-outlet></router-outlet>
+          <li class="dark:bg-gray-50 dark:text-gray-900 bg-gray-900 text-gray-50 font-bold px-2 rounded">
+              You're Here Link
+          </li> -->
+      </ol>
+  </nav>
+  <!-- <button (click)="onToggleThemeClick()"
+      class="cursor-pointer w-10 h-10 p-3 rounded bg-gray-200 dark:bg-gray-700 hover:bg-gray-400 dark:hover:bg-gray-600 transition-colors">
+      <ng-container *ngIf="themeSwitcher.themeMode.value === ThemeMode.Light">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor"
+              class="w-4 h-4 text-gray-800 dark:text-gray-200">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z">
+              </path>
+          </svg>
+      </ng-container>
+      <ng-container *ngIf="themeSwitcher.themeMode.value === ThemeMode.Dark">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" stroke="currentColor"
+              class="w-4 h-4 text-gray-800 dark:text-gray-200">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                  d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+          </svg>
+      </ng-container>
+  </button> -->
+</div>
+
+
+
+
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+
+
+
+<footer class='text-gray-700'>
+  <div class="container mx-auto px-5">
+    <div class="py-28 flex flex-col lg:flex-row items-center">
+      <span class="font-bold tracking-tighter leading-tight text-center lg:text-left mb-10 lg:mb-0 lg:pr-4 lg:w-1/2">
+        Built with ☕: Angular, TypeScript, and TailwindCSS.
+      </span>
+    </div>
+  </div>
+</footer>
