--- a/src/app/components/profile-picture/profile-picture.component.html
+++ b/src/app/components/profile-picture/profile-picture.component.html
@@ -4,6 +4,14 @@
     [rounded]="true">
 	<img
 		alt="Profile Pic of Jessy Cormier"
-		class="profile-picture object-cover w-full aspect-square motion-safe:group-hover:scale-110 transition duration-300 ease-in-out"
+		class="profile-picture object-cover motion-safe:group-hover:scale-110 transition duration-300 ease-in-out"
 		src="assets/profile.webp" />
+
+		<!-- <picture>
+			<source srcset="assets/profile.webp" type="image/webp">
+			<source srcset="assets/profile.jpg" type="image/jpeg">
+			<img src="assets/profile.webp" alt="" 
+			class="object-cover motion-safe:group-hover:scale-110 transition duration-300 ease-in-out"
+			style="width:300px;height:400px;max-height:400px;max-width:300px;min-width:300px;min-height:400px;">
+		</picture> -->
 </app-image-hover>
