--- a/src/app/posts/pages/post-page/post-page.component.html
+++ b/src/app/posts/pages/post-page/post-page.component.html
@@ -1,1 +1,49 @@
-<p>post-page works!</p>
+<div class="container mx-auto px-4">
+
+
+    <div class="prose prose-stone max-w-none dark:prose-invert lg:prose-xl m-auto mt-24">
+        <markdown ngPreserveWhitespaces>
+            # Hello
+    
+            this is a test
+    
+            ```js
+            What does this look like?
+            ```
+    
+            nice I think?
+    
+            ---
+    
+            **How about** this stuff?
+    
+        </markdown>
+
+        <h1>Hello</h1>
+
+        <p>
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping byTHis is great thanks for stopping byTHis is great thanks for stopping
+            byTHis is great thanks for stopping byTHis is great thanks for stopping byTHis is great thanks for stopping
+            by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+            THis is great thanks for stopping by
+
+            <strong>nice</strong>
+            and what about THis <em>sdflkj</em>
+        </p>
+    </div>
+</div>
