--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,6 +36,9 @@
     }
 }
 
+@import "node_modules/prismjs/themes/prism-okaidia.css";
+@import "node_modules/prismjs/plugins/line-numbers/prism-line-numbers.css";
+
 @tailwind components;
 @tailwind utilities;
 
