--- a/src/app/components/brand/brand.component.html
+++ b/src/app/components/brand/brand.component.html
@@ -1,4 +1,4 @@
-<a href="/" class="dark:text-white text-black {{cssClasses}} group font-mono text-center flex items-center align-middle">
+<a routerLink="/" class="dark:text-white text-black {{cssClasses}} group font-mono text-center flex items-center align-middle">
 	<app-logo
 		svgClasses="fill-black dark:fill-white w-10 h-10 transition-all "
 		[lbClasses]="bracketColorCss"
