add layout module and move code related to layout

--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -21,8 +21,8 @@
 </section>
 
 
-<div class="container mx-auto px-4">
+<app-container>
 	<h1 class="text-5xl mt-16">
 		Thanks for visiting, work in progress.
 	</h1>
-</div>
+</app-container>
