--- a/src/app/home/pages/now-page/now-page.component.html
+++ b/src/app/home/pages/now-page/now-page.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4">
+<app-container>
 	<section class="prose prose-stone max-w-none dark:prose-invert lg:prose-xl m-auto mt-24">
 		<h1 class="text-center pb-24">
 			<app-animated-text cssClasses="text-9xl">NOW</app-animated-text>
@@ -10,7 +10,7 @@
 			<li>To rebuild or not to rebuild, that is the question..</li>
 		</ul>
 	</section>
-</div>
+</app-container>
 
 <hr class="mt-16">
 
