--- a/src/app/home/pages/todo-page/todo-page.component.html
+++ b/src/app/home/pages/todo-page/todo-page.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4">
+<app-container>
 	<section class="prose prose-stone max-w-none dark:prose-invert lg:prose-xl m-auto mt-24">
 		<h1>&lbrace; Todos &rbrace;</h1>
 		<p>A list of todos in no particular order and most likely out of date</p>
@@ -8,4 +8,4 @@
 			</li>
 		</ul>
 	</section>
-</div>
+</app-container>
