--- a/src/app/posts/pages/list-page/list-page.component.html
+++ b/src/app/posts/pages/list-page/list-page.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto px-4">
+<app-container>
     <div class="prose prose-stone max-w-none dark:prose-invert lg:prose-xl m-auto mt-24">
         <ul>
             <li *ngFor="let post of posts">
@@ -6,4 +6,4 @@
             </li>
         </ul>
     </div>
-</div>
+</app-container>
