--- a/src/app/posts/pages/post-page/post-page.component.html
+++ b/src/app/posts/pages/post-page/post-page.component.html
@@ -5,7 +5,7 @@
 </button>
 
 
-<div class="container mx-auto px-4">
+<app-container>
     <div class="prose prose-stone max-w-none dark:prose-invert lg:prose-xl m-auto mt-24">
         <h1><app-animated-text>{{ postDetails()?.title }}</app-animated-text></h1>
         
@@ -25,4 +25,4 @@
     <aside class="flex flex-wrap mb-6 space-x-2">
         <app-tag *ngFor="let c of postDetails()?.categories" [category]="c" />
     </aside>
-</div>
+</app-container>
