add SSG support, update layouts and angular version

--- a/src/app/home/pages/home-page/home-page.component.html
+++ b/src/app/home/pages/home-page/home-page.component.html
@@ -25,4 +25,7 @@
 	<h1 class="text-5xl mt-16">
 		Thanks for visiting, work in progress.
 	</h1>
+	<div *ngFor="let post of posts()">
+		{{post.title}} - {{post.date}}
+	</div>
 </app-container>
